--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,18 @@
-Hi!
+<!DOCTYPE html>
+<html>
+<head>
+<title>Test bg</title>
+<style>
+.gray {
+	filter: opacity(75%) grayscale(100%);
+}
+</style>
+</head>
+<body>
+
+<div class="gray">
+<img src="https://static.mydealz.de/threads/raw/vfENq/2255619_1/re/150x150/qt/55/2255619_1.jpg">
+</div>
+
+</body>
+</html>
