--- a/index.htm
+++ b/index.htm
@@ -1,474 +1,18 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miner</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
-
-        body {
-            font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
-            font-size: 16px;
-        }
-        .state {
-            line-height: 20px;
-        }
-        table {
-            margin-top: 20px;
-            border: 1px solid #000;
-            border-collapse: collapse;
-            white-space: nowrap;
-        }
-
-        td {
-            border: 0.5px solid #7b7b7b;
-            padding: 5px;
-            width: 20px;
-            height: 20px;
-            text-align: center;
-            position: relative;
-            display: inline-block;
-            x-box-shadow: inset -1px 1px 0px rgb(255, 255, 255), inset 1px -1px 0px rgba(0, 0, 0, 0.23);
-            background: linear-gradient(#fff, #e5e5e5);
-        }
-        .statePlay td:hover {
-            background: rgba(176, 232, 245, .5);
-            cursor: pointer;
-        }
-        td span {
-            color: #aaa;
-            font-size: 9px;
-            position: absolute;
-            top: 0px;
-            right: 1px;
-        }
-        .empty {
-            background: radial-gradient(circle, rgba(0,0,0,.06) 0%, rgba(0,0,0,.06) 7%, rgb(255, 255, 255) 7%);
-            box-shadow: none;
-            border: 0.5px solid #bbb;
-        }
-        .statePlay .empty:hover {
-            background: radial-gradient(circle, rgba(0,0,0,.06) 0%, rgba(0,0,0,.06) 7%, rgb(255, 255, 255) 7%);
-        }
-        .stateWon .empty {
-            background: rgba(155, 225, 145, 0.3);
-            border: 0.5px solid #bfddbb;
-        }
-        .stateLose .empty {
-            background: rgba(255, 84, 0, 0.1);
-            border: 0.5px solid #e3cfc6;
-        }
-        .hidden {
-            display: none;
-        }
-        input {
-            width: 50px;
-        }
-        .config {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            border: solid 1px #ddd;
-            padding: 0 20px 10px;
-            border-radius: 10px;
-            box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+<title>Test bg</title>
+<style>
+.gray {
+	filter: opacity(75%) grayscale(100%);
+}
+</style>
 </head>
 <body>
-    <div id="app">
-        <div class="loader">
-            <h4>Сапер!</h4> 
-            Загрузка...
-        </div>
-        <div class="hidden game">
-            <div>
-                <h4>Игра</h4>
-                <p class="state">Состояние: {{ minerState.title }}</p>
-                <p class="state">Осталось ячеек: {{ uncheckedCellCount }}</p>
-                <p class="state">Осталось бомб: {{ miner.mineCount - miner.foundBombs }}, найдено: {{ miner.foundBombs }}</p>
-                
-                <p><button @click="miner.showPlantedBombs = !miner.showPlantedBombs">Показать бомбы</button></p>
-                <p><button @click="tip()">Подсказка</button> Использовано: {{ miner.tips }}</p>
-            </div>
 
-            <div class="config">
-                <h4>Настройки игры</h4>
-                <p>
-                    X: <input type="number" v-model="config.x"> &nbsp;
-                    Y: <input type="number" v-model="config.y">
-                </p>
-                <p>Процент мин: <input type="number" v-model="config.minePercent"></p>
-                <p><button @click="configApply()">Применить</button></p>
-            </div>
+<div class="gray">
+<img src="https://static.mydealz.de/threads/raw/vfENq/2255619_1/re/150x150/qt/55/2255619_1.jpg">
+</div>
 
-            <table
-                    :key="`${miner.x}-${miner.y}-${miner.mineCount}`" 
-                    :class="{ statePlay: miner.state < 2, stateWon: miner.state === 2, stateLose: miner.state === 3 }"
-                    onselectstart="return false">
-                <tr v-for="(row, i) in miner.field" :key="i">
-                    <td v-for="(cell, j) in row" :key="j"
-                            @click="cellClicked(i, j)"
-                            @contextmenu.prevent="rightClickCell(i, j)"
-                            :class="{ empty: 0 === cell[1] }"
-                            @dblclick="openAllAround(i, j)"
-                    >
-                        <div>{{ zeroHider(cell[1]) }}</div>
-                        <span v-if="miner.showPlantedBombs && cell[0] === 1">{{ cell[0] }}</span>
-                    </td>
-                </tr>
-            </table>
-
-            <p><button @click="startNewGame()">Новая игра</button></p>
-        </div>
-    </div>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script>
-        // import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js' - требует type="module"
-        const { createApp, ref, reactive, computed, watch } = Vue // если берем из vue.global.js
-
-        /*
-        ToDo:
-        - Сделать красивое поле
-        - Таймер?
-        - Настройки игры в полях, пресеты?
-        - Подсчет очков
-        - Избежать повторы поиска соседей (куски кода с neighborX)
-        - Кнопка Проверить, когда все флажков стоит столько же, сколько бомб, а игра еще идет (то есть, есть закрытые поля) или автоматом проверять?
-        - Подсвечивать поля открытые подсказкой
-        - Анимация победы
-        */
-
-        const App = createApp({
-            setup() {
-
-                let miner = reactive({
-                    x: 10, // размер игрового поля
-                    y: 10,
-                    minePercent: 10, // 10 - легкий, 20 - средний, 30 - сложный
-                    mineCount: 0,
-                    state: 0, // состояния игры. Перечислены в minerState
-                    foundMineCount: 0,
-                    foundBombs: 0,
-                    tips: 0,
-                    showPlantedBombs: false,
-                    dblClicks: [],
-                    field: null,    /*
-                                        Заполняется при запуске. Двумерный массив, в котором лежат массивы [0, ""]:
-                                            Первое значение – наличие бомбы 0/1
-                                            Второе – текущее состояние ячейки:
-                                            "" - значит еще закрыта
-                                            0 - проверена, пустая и рядом нет бомб, получит класс empty
-                                            💥 - проверена, показывает бомбу или взрыв
-                                            4 - проверена, показвает количество бомб в соседних клетках 
-                                    */
-                    icons: {
-                        flag: "🚩",
-                        bomb: "💣",
-                        explosion: "💥"
-                    },
-                })
-
-                const config = {
-                    x: 10, // размер игрового поля
-                    y: 10,
-                    minePercent: 10
-                }
-
-                const startNewGame = () => {
-                    miner.state = 0
-                    miner.foundMineCount = 0
-                    miner.foundBombs = 0
-                    miner.tips = 0
-                    miner.showPlantedBombs = false
-                    miner.mineCount = Math.floor(miner.x * miner.y * miner.minePercent / 100)
-                    miner.dblClicks = []
-
-                    miner.field = reactive( // инициализируем игровое поле
-                        Array.from( // трехмерный массив: x, y, бомба?, отображение ячейки
-                            { length: miner.x }, () => Array.from(
-                                { length: miner.y }, () => [0, ""]
-                            )
-                        )
-                    )
-                }
-
-                const configApply = () => {
-                    miner.x = config.x
-                    miner.y = config.y
-                    miner.minePercent = config.minePercent
-
-                    startNewGame()
-                }
-
-                const placeMines = (i, j) => {
-                    let placedMines = 0
-
-                    while (placedMines < miner.mineCount) {
-                        const randomX = Math.floor(Math.random() * miner.x)
-                        const randomY = Math.floor(Math.random() * miner.y)
-
-                        if (Math.abs(randomX - i) <= 1 && Math.abs(randomY - j) <= 1) { // текущая и соседние ячейки
-                            continue
-                        }
-
-                        if (0 === miner.field[randomX][randomY][0]) { // Проверяем, нет ли уже бомбы в этой ячейке
-                            miner.field[randomX][randomY][0] = 1
-                            placedMines++
-                        }
-                    }
-                }
-
-                const cellClicked = (i, j) => {
-                    if (0 === miner.state) { // если игра не запущена
-                        placeMines(i, j) // размещаем мины
-                        miner.state = 1 // запускаем игру
-                    } else if (2 === miner.state || 3 === miner.state) { // если игра закончена
-                        return false
-                    }
-
-                    if (1 === miner.field[i][j][0]) { // нажал на бомбу
-                        gameOver(i, j)
-                    } else {
-                        getMinesAroundCellCount(i, j)
-                    }
-                }
-
-                const openAllAround = (i, j) => { // нажимаем на все ПУСТЫЕ поля вокруг
-                    for (let x = -1; x <= 1; x++) {
-                        for (let y = -1; y <= 1; y++) {
-                            if (0 === x && 0 === y) {
-                                continue // пропуск центра
-                            }
-
-                            const neighborX = i + x
-                            const neighborY = j + y
-
-                            if ( // если мы в рамках поля
-                                neighborX >= 0 && neighborX < miner.field.length 
-                                && neighborY >= 0 && neighborY < miner.field[neighborX].length
-                            ) {
-                                if ("" === miner.field[neighborX][neighborY][1]) {
-                                    cellClicked(neighborX, neighborY)
-                                }
-                            }
-                        }
-                    }
-                }
-
-                const gameOver = (i, j) => {
-                    showAllBombs()
-                    miner.field[i][j] = [1, miner.icons.explosion] // взрыв
-                    miner.state = 3 // проиграл 
-                }
-
-                const showAllBombs = (flag = 0) => {
-                    emoji = (1 === flag) ? miner.icons.flag : miner.icons.bomb
-
-                    for (let x = 0; x < miner.x; x++) {
-                        for (let y = 0; y < miner.y; y++) {
-                            if (1 === miner.field[x][y][0]) {
-                                if (miner.icons.flag !== miner.field[x][y][1]) { // пропускаем флажки
-                                    miner.field[x][y][1] = emoji
-                                }
-                            }
-                        }
-                    }
-                }
-
-                const getMinesAroundCellCount = (i, j) => {
-                    let minesCount = 0
-
-                    for (let x = -1; x <= 1; x++) {
-                        for (let y = -1; y <= 1; y++) {
-                            if (0 === x && 0 === y) {
-                                continue // пропуск центра
-                            }
-
-                            const neighborX = i + x
-                            const neighborY = j + y
-
-                            if ( // если мы в рамках поля
-                                neighborX >= 0 && neighborX < miner.field.length 
-                                && neighborY >= 0 && neighborY < miner.field[neighborX].length
-                            ) {
-                                if (1 === miner.field[neighborX][neighborY][0]) {
-                                    minesCount++
-                                }
-                            }
-                        }
-                    }
-
-                    const newCell = [...miner.field[i][j]]
-                    newCell[1] = (minesCount > 0) ? minesCount : 0
-
-                    miner.field[i].splice(j, 1, newCell) // удаляем 1 элемент массива стоящего на индексе j и ставим на его место новый
-
-                    if (0 === newCell[1]) { // если рядом нет бомб, то открываем все пустые до которых можно дотянуться
-                        openEmptyCells(i, j)
-                    }
-                }
-
-                const openEmptyCells = (i, j) => {
-                    for (let x = -1; x <= 1; x++) {
-                        for (let y = -1; y <= 1; y++) {
-                            const neighborX = i + x
-                            const neighborY = j + y
-
-                            if (
-                                neighborX >= 0 && neighborX < miner.field.length 
-                                && neighborY >= 0 && neighborY < miner.field[neighborX].length
-                            ) {
-                                const neighborCell = miner.field[neighborX][neighborY]
-                                if ("" === neighborCell[1] && 1 !== neighborCell[0]) { // если ячейка еще не проверялась и тут мне мина
-                                    getMinesAroundCellCount(neighborX, neighborY) // то проверяем ее соседей
-                                    // все это проверяется рекурсивно до тех пор, пока не закончатся непроверенные соседи
-                                }
-                            }
-                        }
-                    }
-                }
-
-                const rightClickCell = (i, j) => {
-                    if (1 !== miner.state) {
-                        return
-                    }
-
-                    const cell = miner.field[i][j]
-
-                    if ("" === cell[1]) { // ставим или снимаем флаг
-                        miner.field[i][j] = [cell[0], miner.icons.flag]
-                    } else if (miner.icons.flag === cell[1]) {
-                        miner.field[i][j] = [cell[0], ""]
-                    }
-                }
-
-                const tip = () => {
-                    if (miner.state !== 1) { // только идущая игра
-                        return 
-                    }
-                    const freeCells = []
-
-                    const checkNeighbor = (x, y) => {
-                        if ( // если мы в пределах поля
-                            x >= 0 && x < miner.field.length 
-                            && y >= 0 && y < miner.field[x].length
-                        ) {
-                            if ("" !== miner.field[x][y][1]) {
-                                return true
-                            }
-                        }
-                        return false
-                    }
-
-                    for (let x = 0; x < miner.x; x++) {
-                        for (let y = 0; y < miner.y; y++) {
-                            if ( // слева, справа, сверху или снизу должно быть хоть что-то открытое
-                                checkNeighbor(x - 1, y)
-                                || checkNeighbor(x + 1, y)
-                                || checkNeighbor(x, y - 1)
-                                || checkNeighbor(x, y + 1)
-                            ) {
-                                if (0 === miner.field[x][y][0] && "" === miner.field[x][y][1]) { // если нет бомбы и не проверена
-                                    freeCells.push([x, y])
-                                }
-                            }
-                        }
-                    }
-                    
-                    const randomIndex = Math.floor(Math.random() * freeCells.length)
-                    const randomCell = freeCells[randomIndex]
-                    cellClicked(randomCell[0], randomCell[1])
-
-                    miner.tips++
-                }
-
-                const minerState = computed(() => {
-                    switch (miner.state) {
-                        case 0:
-                            return {
-                                title: "Новая игра",
-                                tableClass: "stateNew"
-                            }
-                        case 1:
-                            return {
-                                title: "Игра идет",
-                                tableClass: "statePlay"
-                            }
-                        case 2:
-                            return {
-                                title: "Победа! 😎",
-                                tableClass: "stateWon"
-                            }
-                        case 3:
-                            return {
-                                title: "Поражение 🤕",
-                                tableClass: "stateLose"
-                            }
-                    }
-                })
-
-                const getNumberOfFlags = computed(() => {
-                    if (miner.state === 0) {
-                        return 0
-                    }
-
-                    let flagsCount = 0
-
-                    for (let x = 0; x < miner.x; x++) {
-                        for (let y = 0; y < miner.y; y++) {
-                            if (miner.icons.flag === miner.field[x][y][1]) {
-                                flagsCount++
-                            }
-                        }
-                    }
-
-                    miner.foundBombs = flagsCount
-
-                    return flagsCount
-                })
-
-                const uncheckedCellCount = computed(() => {
-                    if (1 !== miner.state) { // только при игре
-                        return 0
-                    }
-
-                    let uncheckedCells = 0
-
-                    for (let x = 0; x < miner.x; x++) {
-                        for (let y = 0; y < miner.y; y++) {
-                            if ("" === miner.field[x][y][1]) {
-                                uncheckedCells++
-                            }
-                        }
-                    }
-
-                    if (0 === uncheckedCells + getNumberOfFlags.value - miner.mineCount) {
-                        miner.state = 2 // выиграл
-                        miner.foundBombs = miner.mineCount
-                        showAllBombs(1) // показываем флажки
-                    }
-
-                    return uncheckedCells // для отображения
-                })
-
-                const zeroHider = (str) => { // скрываем нули в пустых ячейках
-                    return (0 === str) ? "" : str
-                }
-
-                startNewGame()
-
-                return { 
-                    miner, cellClicked, rightClickCell, minerState, zeroHider,
-                    uncheckedCellCount, tip, configApply, config, startNewGame, openAllAround
-                }
-            },
-            mounted() {
-                document.querySelector(".game").classList.remove("hidden")
-                document.querySelector(".loader").classList.add("hidden")
-            }
-        }).mount('#app')
-    </script>
 </body>
 </html>
